--- a/src/app/Components/todo-item/todo-item.component.html
+++ b/src/app/Components/todo-item/todo-item.component.html
@@ -1,10 +1,13 @@
-<div class="task-style my-3" [ngClass]="{
+<div
+  class="task-style my-3 wordwrap"
+  [ngClass]="{
     'learning-background': task.type === 'Learning',
-  'health-background': task.type === 'Health',
-  'travel-background': task.type === 'Travel'
-}">
+    'health-background': task.type === 'Health',
+    'travel-background': task.type === 'Travel'
+  }"
+>
   <h4>{{ task.title }}</h4>
   <p>{{ task.description }}</p>
-  <p>{{ task.type }} </p>
+  <p>{{ task.type }}</p>
   <button class="btn btn-sm btn-danger" (click)="onClick(task)">Delete</button>
 </div>
